# Fraud_Detection_Project

./: .gitignore  CMakeLists.txt  dataset_generator.py
output/: decision_voting_report.csv  performance_report.csv  preprocessing_report.csv
src/: decision_module.cpp  decision_module.h  distance_calculation.cu  distance_calculation.cuh  main.cpp  preprocessing.cpp  preprocessing.h  timer.h
